Fixed site moving up and down on mobile
When on mobile screen sizes, typed.js would create a whole new line for longer words. Thus, the whole stie would move up and down randomly. Set a fixed height on when on mobile to fix this.

--- a/css/styles.css
+++ b/css/styles.css
@@ -304,6 +304,8 @@ Media Queries
         align-content: center;
         text-align: center;
         align-items: center;
+
+        min-height: 600px;
     }
 
     .nextMeeting {
